--- a/BP_ImageClass.ipynb
+++ b/BP_ImageClass.ipynb
@@ -1,27 +1,30 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c60b3a84",
    "metadata": {},
    "source": [
-    "# Best-Practice für Bildklassifikator-Training"
+    "# Best-Practice for Image Classifier Training"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bfcd5fcb",
    "metadata": {},
    "source": [
-    "In diesem Notebook behandeln wir die grundlegenden Schritte zum Training eines Bauteilklassifikators. Hierbei verwenden wir ein bereits vortrainiertes Modell. D.h. das ML-Modell wird nur noch für unsere Bauteile spezifiert. Die zur Verfügung stehenden Modelle sind alle auf dem imagenet Datensatz (https://www.image-net.org) vortrainiert worden. Dieser Benchmark umfasst 1000 verschiedene Objekte, von Tieren, über Gegenständen bishin zu Personen und Landschaften. Modelle die mit diesem Datensatz trainiert wurden, weisen daher eine hohe Generalisierbarkeit auf, welche wir uns hier zu Nutze machen. Ein weiterer Vorteil ist die verkürzte Trainingsdauer, sowie geringere Trainingsdatenmenge."
+    "In this notebook we cover the basic steps to train a part classifier. Here we use an already pre-trained model. That is, the ML model is only specified for our components. The available models have all been pre-trained on the imagenet dataset (https://www.image-net.org). This benchmark includes 1000 different objects, from animals, to objects, to people and landscapes. Models trained on this dataset therefore have a high generalizability, which we take advantage of here. Another advantage is the shorter training time and the smaller amount of training data."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a2a10d9",
    "metadata": {},
    "source": [
-    "## Schritt 1 - Abhängigkeiten und Vorbereitung"
+    "## Step 1 - Dependencies"
    ]
   },
   {
@@ -55,7 +58,7 @@
     }
    ],
    "source": [
-    "#GPU Untrstützung und Abhängigkeiten\n",
+    "#GPU Support\n",
     "import tensorflow as tf\n",
     "print(tf.__version__ )\n",
     "tf.config.experimental.list_logical_devices('GPU')\n",
@@ -77,12 +80,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "613a7d30",
    "metadata": {},
    "source": [
-    "### Festlegung der Modellarchitekturen\n",
-    "Zunächst legen wir eine Auswahl von Modellarchitekturen fest, welche den aktuellen Stand der Technik wiederspiegeln. Anschließend wählen wir eine Architektur hierfür aus. Genauere Informationen zu den Modellen findet man auf https://www.tensorflow.org/api_docs/python/tf/keras/applications. Wichtig ist hierbei die Festlegung der Auflösung für das Modell. Die meisten Modelle sind für eine Auflösung von 224 x 224 ausgelegt."
+    "### Defining the model architectures\n",
+    "First, we define a selection of model architectures that reflect the current state of the art. Then we select an architecture for this purpose. More detailed information on the models can be found at https://www.tensorflow.org/api_docs/python/tf/keras/applications. It is important to specify the resolution for the model. Most models are designed for a resolution of 224 x 224."
    ]
   },
   {
@@ -113,11 +117,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "486e659f",
    "metadata": {},
    "source": [
-    "Danach bauen wir uns eine Hilfsfunktion zur Auswahl und Initialisierung eines Modells"
+    "After that we build a helper function for selecting and initializing a model"
    ]
   },
   {
@@ -152,11 +157,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a89e45a",
    "metadata": {},
    "source": [
-    "Die untere Zelle muss bei Wechseln des Modells erneut ausgeführt werden."
+    "The lower cell must be executed again when changing the model."
    ]
   },
   {
@@ -180,12 +186,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a606685a",
    "metadata": {},
    "source": [
-    "## Schritt 2 - Festlegung der der Dateipfade und Modellparameter\n",
-    "In diesem Beispiel haben wir die Funktionalität für das Laden der Daten im Modul \"core.classprep\" ausgelagert. Die Klasse \"core.classprepfileNameHandler\" zeigt einige beispielhafte Implementierungen für Parser basierend auf einer CSV Datei. Wir gehen im folgenden davon aus, dass eine csv datei exisitert in der mindestens eine Spalte mit \"labeln\", also Klassenbezeichnungen und Dateipfaden zu den Bildern vorliegt. Häufig werden die Dateipfade relativ zur CSV Datei angegeben, daher ist auch der Einstiegspunkt für die Dateien mit \"dataFilesPrefix\" zu setzen."
+    "## Step 2 - Defining the file paths and model parameters\n",
+    "In this example, we have outsourced the functionality for loading the data in the \"core.classprep\" module. The class \"core.classprepfileNameHandler\" shows some example implementations for parsers based on a CSV file. We assume in the following that a csv file exists in which at least one column with \"labels\", i.e. class names and file paths to the images is present. Often the file paths are specified relative to the CSV file, therefore the entry point for the files is also to be set with \"dataFilesPrefix\"."
    ]
   },
   {
@@ -195,33 +202,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Pfad zur CSV in der die Infos zu den Labeln und Dateipfade der Bilder stehen.\n",
+    "## Path to the CSV containing the information about the labels and file paths of the images.\n",
     "datasetCSV='./sample_data/data_sample.csv'\n",
     "\n",
-    "## Nun überprüfen wir noch, ob wir auch darauf zugreifen können.\n",
+    "## Now we still check whether we can also access it.\n",
     "if not os.path.exists(datasetCSV):\n",
     "    print('Data CSV File not found:',datasetCSV)\n",
     "dataFilesPrefix='./'\n",
     "if not os.path.exists(dataFilesPrefix):\n",
     "    print('Data CSV File not found:',dataFilesPrefix)\n",
     "\n",
-    "## Zum Schluss legen wir noch den Pfad fest, in der das trainierte Modell abgelegt werden soll\n",
+    "## Finally, we specify the path in which the trained model should be stored\n",
     "pathToTrained='./trainedModels/bp_exps'\n",
-    "## Wir können natürlich auch erstmal nur die Modelle trainieren und später speichern. In dem Fall auf False setzen.\n",
-    "#- zum sparen von Speicherplatz werden auch immer nur das erste Modell einer Versuchsreihe gespeichert.\n",
+    "## Of course, we can also train only the models first and save them later. In this case set to False.\n",
+    "#- To save memory, only the first model of a test series is saved.\n",
     "saveFirstModel=True\n",
     "\n",
-    "## Festlegung in welcher Spalte die Label zu finden sind.\n",
+    "## Determine in which column the labels are to be found.\n",
     "labelCol='category_2'\n",
     "    "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cb3dfe55",
    "metadata": {},
    "source": [
-    "Als nächstes sind die Modell spezifischen Paramter dran. Um \"zufällige\" Ergebnisse auszuschließen sollten immer mindestens fün \"ran_states\" am Ende ausgeführt worden sein."
+    "Next are the model specific parameters. To exclude \"random\" results, at least five \"ran_states\" should always be executed at the end."
    ]
   },
   {
@@ -231,40 +239,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# - Liste von random states für den train/validation split. Wertebereich von 0 bis 99\n",
+    "#- List of random states for the train/validation split. Value range from 0 to 99\n",
     "ran_states=[42,32,18,84,2]\n",
     "\n",
-    "# - Wieviele Bilder auf einmal verarbeitet werden sollen. \n",
-    "# Diese sollte immer kleiner sein als die Bilder die pro Klasse zur Verfügung stehen\n",
+    "# - How many images should be processed at once. \n",
+    "# This should always be smaller than the images available per class.\n",
     "batches=[32]\n",
     "\n",
-    "# stream data - wenn der RAM nicht ausreichen sollte.\n",
+    "# stream data - if the RAM is not sufficient.\n",
     "streamData=False\n",
     "\n",
-    "# Anzahl der Trainingsepochen\n",
+    "# Number of training epochs.\n",
     "numEpochs=10\n",
     "\n",
-    "# Festlegung des zu verwendeten Optimierers.\n",
+    "# Definition of the optimizer to be used.\n",
     "#optis=[Adam,SGD,RMSprop]\n",
     "optis=[SGD,Adam,RMSprop]\n",
     "\n",
-    "# Festlegung der Lernrate. Achtung diese korreliert direkt mit der batch Größe\n",
+    "# Set the learning rate. Attention this correlates directly with the batch size\n",
     "#lrates=[1e-1,1e-2,5e-3]\n",
     "lrates=[1e-2]\n",
     "\n",
-    "# In unserem Fall gibt es noch weitere Attribute im CSV File, welche hier wahlweise an oder abgewählt werden.\n",
+    "# In our case there are further attributes in the CSV file, which can be selected or deselected here.\n",
     "trainSets=[['without_shaders'],['shaders_without_bg']]\n",
     "\n",
-    "## Geben wir dem Modellversuchh einen sprechenden Namen\n",
+    "## Let's give the model test a descriptive name\n",
     "appName='best_practice_exp'"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5b4ce875",
    "metadata": {},
    "source": [
-    "Sind alle Modellparametervariationen ausgewählt, können wir die Hyperparamterstude zusammenbauen. In unserem Beispiel ist dies nur eine Variation."
+    "Once all model parameter variations are selected, we can assemble the hyperparamterstude. In our example, this is only one variation."
    ]
   },
   {
@@ -694,11 +703,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5fb8d6f7",
    "metadata": {},
    "source": [
-    "### Auswahl des Parametersatzes für das aktuelle Training und prüfen ob wir die Daten nochmal laden müssen"
+    "### Select the parameter set for the current training and check if we need to load the data again"
    ]
   },
   {
@@ -740,14 +750,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ea06a64e",
    "metadata": {},
    "source": [
-    "## Schritt 3 - Laden der Trainingsdaten und ggf. Testdaten in der für das Modell passenden Form\n",
-    "Zunächst laden wir die CSV Datei ein, welche uns alle notwendigen Informationen liefert. Danach folgt ein optionales Filtern. Je nach Problemstellung, lässt sich hier der Datensatz für das Training noch in alle Richtungen einschränken. In unserem Fall, wollen wir mit den \"einfachen\"(without_shaders) Bilddaten trainieren und mit den \"komplexen\" (shaders_with_bg) testen.\n",
+    "## Step 3 - Loading the training data and, if necessary, test data in the form suitable for the model.\n",
+    "First we load the CSV file, which provides us with all the necessary information. This is followed by an optional filtering. Depending on the problem, the data set for the training can be limited in all directions. In our case, we want to train with the \"simple\" (without_shaders) image data and test with the \"complex\" (shaders_with_bg).\n",
     "\n",
-    "Das Ergebnis von -Schritt 2- lässt sich auch super abspeichern, sodass nun Schritt 3 und 4 auf einem leistungsfähigen Rechner ausgeführt werden können."
+    "The result of -step 2- can also be saved easily, so that now step 3 and 4 can be executed on a powerful computer."
    ]
   },
   {
@@ -802,7 +813,7 @@
     }
    ],
    "source": [
-    "## CSV einladen und filtern\n",
+    "## Load and filter CSV\n",
     "df_in=pd.read_csv(datasetCSV,sep=';') \n",
     "df_train=df_in[df_in['attributes'].isin(setting[0])]\n",
     "df_test=df_in[df_in['attributes'].isin(['shaders_with_bg'])]\n",
@@ -818,12 +829,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2ff311ed",
    "metadata": {},
    "source": [
-    "## Schritt 4 - Trainieren des Modells mit den gewählten Auswahl an Parametern\n",
-    "Nun können wir das Modell bereits trainieren."
+    "## Step 4 - Train the model with the selected set of parameters\n",
+    "Now we can already train the model."
    ]
   },
   {
@@ -903,11 +915,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dce2913a",
    "metadata": {},
    "source": [
-    "Schauen wir uns zunächst kurz den Verlauf nochmal an"
+    "First, let's take a brief look at the process again"
    ]
   },
   {
@@ -964,17 +977,18 @@
     }
    ],
    "source": [
-    "# Speichern des Modells - Dies kann etwas dauern!\n",
+    "# Saving the model - This may take some time!\n",
     "model.save(pathToTrained+'/test_Model')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "012bfb7a",
    "metadata": {},
    "source": [
-    "## Schritt 5 - Testen des Modells\n",
-    "Wenn wir schon vorher Testdaten bestimmt haben, können wir nun unser Modell dagegen testen. In der zugehörigen Funktion werden die Standard Metriken: Precision, Recall und F1-score ausgegeben."
+    "## Step 5 - Testing the model\n",
+    "If we have already determined test data before, we can now test our model against it. In the corresponding function the standard metrics: Precision, Recall and F1-score are output."
    ]
   },
   {
@@ -999,11 +1013,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75aa26d7",
    "metadata": {},
    "source": [
-    "Schauen wir uns zunächst die Ergebnisse in einer Tabelle an und gruppieren sie anschließend nach Klasse."
+    "Let's first look at the results in a table and then group them by class."
    ]
   },
   {
@@ -1471,11 +1486,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6799452d",
    "metadata": {},
    "source": [
-    "Jetzt können wir das ganze auch noch visualisieren. Was sich besonders gut eignet, wenn wir mehrere Versuche vergleichen wollen"
+    "Now we can also visualize the whole experiment. Which is especially helpful if we want to compare several experiments."
    ]
   },
   {
@@ -1510,7 +1526,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "# - plot der Metriken, aufgeteilt nach Klassen\n",
+    "# - plot of metrics divided by classes\n",
     "fig,axes= plt.subplots(1,1,figsize=(18,8),sharex=True,sharey=True)\n",
     "sns.pointplot(data=preds_df,x='label',y='f1-score',ax=axes,color='black')\n",
     "sns.pointplot(data=preds_df,x='label',y='precision',ax=axes,color='red')\n",
